keeb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keeb
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - keeb.danielpower.ca
      secretName: personal-site-tls
  rules:
    - host: keeb.danielpower.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keeb
                port:
                  name: http
